--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.10",
     "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
