new multiplayer mode registration adding friend feature still buggy the error is because getCurrentAuth() is still returning null need to fix getCurrentAuth to properly access InstantDB auth state need to debug magic code authentication config make ui look prettier too

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "tipsy-app-mobile",
-    "slug": "tipsy-app-mobile",
+    "name": "loopy-app-mobile",
+    "slug": "loopy-app-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
