--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tipsy-app-mobile",
+  "name": "loopy-app-mobile",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -9,6 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@instantdb/react": "^0.22.1",
+    "@instantdb/react-native": "^0.22.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.10",
@@ -18,6 +22,7 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1"
